WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
155264
Web Inspector: Get a RemoteObject or ObjectPreview from HeapSnapshot Object Identifier
https://bugs.webkit.org/show_bug.cgi?id=155264
Summary
Web Inspector: Get a RemoteObject or ObjectPreview from HeapSnapshot Object I...
Joseph Pecoraro
Reported
2016-03-09 14:57:04 PST
* SUMMARY Get a RemoteObject or ObjectPreview from HeapSnapshot Object Identifier.
Attachments
[PATCH] Proposed Fix
(40.51 KB, patch)
2016-03-09 15:01 PST
,
Joseph Pecoraro
timothy
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews115 for mac-yosemite
(906.36 KB, application/zip)
2016-03-09 15:58 PST
,
Build Bot
no flags
Details
[PATCH] For Landing
(41.56 KB, patch)
2016-03-09 21:25 PST
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2016-03-09 14:57:30 PST
<
rdar://problem/25070716
>
Joseph Pecoraro
Comment 2
2016-03-09 15:01:55 PST
Created
attachment 273488
[details]
[PATCH] Proposed Fix
WebKit Commit Bot
Comment 3
2016-03-09 15:03:13 PST
This patch modifies the inspector protocol generator. Please ensure that you have rebaselined any generator test results (i.e., by running `Tools/Scripts/run-inspector-generator-tests --reset-results`)
WebKit Commit Bot
Comment 4
2016-03-09 15:03:21 PST
Attachment 273488
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/inspector/agents/InspectorHeapAgent.h:58: The parameter name "functionDetails" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/JavaScriptCore/inspector/agents/InspectorHeapAgent.h:58: The parameter name "objectPreview" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 2 in 15 files If any of these errors are false positives, please file a bug against check-webkit-style.
Build Bot
Comment 5
2016-03-09 15:58:32 PST
Comment on
attachment 273488
[details]
[PATCH] Proposed Fix
Attachment 273488
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/950573
New failing tests: inspector/heap/getPreview.html
Build Bot
Comment 6
2016-03-09 15:58:35 PST
Created
attachment 273498
[details]
Archive of layout-test-results from ews115 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews115 Port: mac-yosemite Platform: Mac OS X 10.10.5
Joseph Pecoraro
Comment 7
2016-03-09 21:25:22 PST
Created
attachment 273544
[details]
[PATCH] For Landing Can't run these on WK1, because the inspector and inspected page sharing a VM causes heap explosion and confusion. Skipped them on WK1.
WebKit Commit Bot
Comment 8
2016-03-09 21:26:20 PST
Attachment 273544
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/inspector/agents/InspectorHeapAgent.h:58: The parameter name "functionDetails" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/JavaScriptCore/inspector/agents/InspectorHeapAgent.h:58: The parameter name "objectPreview" adds no information, so it should be removed. [readability/parameter_name] [5] WARNING: Not running on native Windows. Total errors found: 2 in 16 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 9
2016-03-09 22:15:15 PST
Comment on
attachment 273544
[details]
[PATCH] For Landing Clearing flags on attachment: 273544 Committed
r197926
: <
http://trac.webkit.org/changeset/197926
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug